# Velo-App

./: .env.example  .gitignore  README.md  docker-compose.yml  implementation_plan.md  task.md
backend/core-api/: README.md  go.mod  go.sum
backend/core-api/cmd/: main.go
backend/core-api/config/: config.go
backend/core-api/internal/delivery/grpc/: auth_server.go  gateway_server.go
backend/core-api/internal/delivery/http/: attachment_handler.go  channel_handler.go  message_handler.go  middleware.go  user_handler.go  (+3 more)
backend/core-api/internal/domain/: attachment.go  channel.go  message.go  models.go  notification.go  pinned_message.go  user.go  workspace.go
backend/core-api/internal/usecase/: attachment_usecase.go  channel_usecase.go  message_usecase.go  notification_usecase.go  pinned_message_usecase.go  user_usecase.go  workspace_usecase.go
backend/core-api/pkg/token/: paseto.go
backend/gateway/: Cargo.toml  README.md  build.rs
backend/gateway/src/: client.rs  handler.rs  main.rs  queue.rs
design/: backend.md  frontend.md  ui.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: CommandPalette.tsx  ConfirmDialog.tsx  DynamicIslandCall.tsx  IncomingCallDialog.tsx  Toaster.tsx  avatar.tsx
frontend/src/context/: VoiceCallContext.tsx
frontend/src/hooks/: useCurrentUser.ts  useLiveKit.ts  useWebSocket.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/store/: useChatStore.ts  useConfirmStore.ts  useToastStore.ts
frontend/src/types/: index.ts
proto/: README.md  auth.proto  gateway.proto
(+54 files in other folders)
