[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
dotenvy = "0.15"
uuid = { version = "1.8", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# gRPC (Tonic & Prost)
tonic = "0.11"
prost = "0.12"

# Valkey/Redis client
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
dashmap = "5.5"

[build-dependencies]
tonic-build = "0.11"
